Fixed Spanish headline (extra space)

--- a/source/css/maya.css
+++ b/source/css/maya.css
@@ -67,7 +67,7 @@ h1 {
   background: url(../../assets/images/text/headline-eng.png) no-repeat;
 }
 body.spanish #wrapper h1.text-replacement {
-  width: 884px;
+  width: 876px;
   height: 77px;
   background: url(../../assets/images/text/headline-esp.png) no-repeat;
   padding-bottom: 14px;
